# gabriel-desktop

./: .gitignore  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
apps/gateway/: README.md  pyproject.toml
apps/gateway/src/gabriel_gateway/: __init__.py  config.py  core_specs.py  identity_client.py  main.py  schema.py  session.py  settings.py
apps/gateway/src/gabriel_gateway/routes/: __init__.py  auth.py  health.py
apps/gateway/tests/: conftest.py  test_auth_routes.py  test_core_specs.py  test_gateway_api.py
apps/web/: .env.example  .env.local.example  next.config.mjs  package.json  tsconfig.tsbuildinfo
apps/web/src/app/: globals.css  layout.tsx
apps/web/src/config/: navigation.ts
apps/web/src/hooks/: use-notifications.ts
apps/web/src/lib/: format.ts  utils.ts
apps/web/src/services/: agents.ts  auth.ts  chat.ts  dashboard.ts  documents.ts  events.ts  gateway-client.ts  index.ts  knowledge.ts  memory.ts  notifications.ts  organizations.ts  resources.ts  search.ts  token-store.ts  tools.ts
apps/web/src/stores/: session-store.ts  ui-store.ts
apps/web/src/types/: agent.ts  api.ts  chat.ts  common.ts  document.ts  event.ts  identity.ts  index.ts  knowledge.ts  memory.ts  resource.ts  (+4 more)
docs/: M0-scaffold.docx  M0-scaffold.md  M1-identity.docx  M1-identity.md  v1-tool-management-and-agent-config.docx  v1-tool-management-and-agent-config.md
scripts/: dev.sh
services/identity/: README.md  pyproject.toml
services/identity/src/gabriel_identity/: __init__.py  config.py  jwt_service.py  main.py  models.py  routes.py  seed.py  service.py
services/identity/src/gabriel_identity/providers/: __init__.py  base.py  dev.py  registry.py
services/identity/tests/: conftest.py  test_dev_provider.py  test_jwt.py  test_prod_guard.py  test_routes.py
(+81 files in other folders)
