[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gabriel-gateway"
version = "0.1.0"
description = "Gabriel Gateway (BFF) — session management and auth delegation to the Identity Service."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115,<0.116",
    "uvicorn[standard]>=0.32,<0.33",
    "pydantic>=2.9,<3",
    "pydantic-settings>=2.6,<3",
    # httpx is the transport the Gateway uses to call gabriel-core's HTTP API.
    # The Gateway deliberately does NOT depend on gabriel-core as a package —
    # the two services are wired together purely over HTTP (Phase 4 rule).
    "httpx>=0.27,<0.28",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<9",
    "pytest-asyncio>=0.24,<0.25",
    "asgi-lifespan>=2.1,<3",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
asyncio_mode = "auto"
