[project]
name = "gabriel-identity"
version = "0.1.0"
description = "Gabriel Identity Service — the sole authentication authority (ADR-007)."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115,<0.116",
    "uvicorn[standard]>=0.32,<0.33",
    "pydantic>=2.9,<3",
    "pydantic-settings>=2.6,<3",
    "PyJWT>=2.9,<3",
    "cryptography>=43,<44",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<9",
    "httpx>=0.27,<0.28",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
